# labs_algo

./: 10J_goblin_queues.cpp  11K_mem_manager.cpp  12L_min_value.cpp  13M_path_search.cpp  14N_pigs_savers.cpp  15O_graph_coloring.cpp  16P_avia_fuel.cpp  1A_agro_lover.cpp  2B_zoo_keeper.cpp  3C_conf_file.cpp  4D_prof_bacteria.cpp  5E_cow_placer.cpp  6F_number_find.cpp  7G_alph_nightmare.cpp  8H_recipe_count.cpp  9I_car-queue.cpp  CMakeLists.txt  README.md
