cmake_minimum_required(VERSION 3.24)
project(algo)

set(CMAKE_CXX_STANDARD 11)

#add_executable(algo 1_agro_lover.cpp)
#add_executable(algo 2_zoo_keeper.cpp)
#add_executable(algo 3_conf_file.cpp)
#add_executable(algo 4_prof_bacteria.cpp)
#add_executable(algo 5_cow_placer.cpp)
#add_executable(algo 6_number_find.cpp)
#add_executable(algo 7_alph_nightmare.cpp)
#add_executable(algo 8_recipe_count.cpp)
#add_executable(algo  9_car-queue.cpp)
#add_executable(algo 10_goblin_queues.cpp)
#add_executable(algo 11K_mem_manager.cpp)
#add_executable(algo 12_min_value.cpp)
#add_executable(algo 13M_path_search.cpp)
#add_executable(algo 14N_pigs_savers.cpp)
#add_executable(algo 15O_graph_coloring.cpp)
add_executable(algo 16P_avia_fuel.cpp)